Changed some styling around image

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .main-section + .img {
-  background: url("/images/hero-desktop.jpg");
+  background: url("../images/hero-desktop.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
