--- a/styles/style.scss
+++ b/styles/style.scss
@@ -57,7 +57,7 @@ body {
         margin-top: 2em;
     }
     + .img {
-        background: url('/images/hero-desktop.jpg');
+        background: url('../images/hero-desktop.jpg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
